--- a/styles/sass/base/_resets.sass
+++ b/styles/sass/base/_resets.sass
@@ -18,6 +18,8 @@ html
         color: $fc-default
     a
         color: $fc-default
+    textarea
+        resize: none
 *, *:before, *:after // border-boxing and other defaults
     box-sizing: border-box
     list-style: none
