--- a/styles/sass/components/_admin.sass
+++ b/styles/sass/components/_admin.sass
@@ -368,9 +368,11 @@ section.admin-container
                     >label
                         font-weight: bold
                         white-space: nowrap
-                    >input
+                    >input, >textarea
                         flex: 1
                         @include inputText
+                    >textarea
+                        height: 10em
                     >.selection
                         flex: 1
                         color: $fc-admin
