--- a/styles/publicDat/scss/layout/_members.scss
+++ b/styles/publicDat/scss/layout/_members.scss
@@ -13,6 +13,8 @@
             
             .image_number{
                 width: 200px;
+                height: 200px;
+                overflow: hidden;
                 border-radius: 100px;
             }
         }
