--- a/styles/publicDien/css/style.css
+++ b/styles/publicDien/css/style.css
@@ -151,7 +151,7 @@
   width: 100%;
   background-color: #0d121a;
   height: 5px;
-  margin-top: -10px;
+  /* margin-top: -10px; */
   margin-bottom: 10px;
 }
 
