--- a/styles/sass/abstracts/mixins/_home-mixins.sass
+++ b/styles/sass/abstracts/mixins/_home-mixins.sass
@@ -45,8 +45,8 @@
         >div.price
             @include flex($direction: row, $gap: .5em)
             display: inline-flex
-            font-size: .85em
-            padding: 0 .5em 0 .5em
+            font-size: 1.1em
+            padding: 0.2em .4em
             span
                 font-size: .95em
                 text-decoration: line-through
