--- a/styles/index.css
+++ b/styles/index.css
@@ -241,6 +241,11 @@ header nav > div.search > div.search-results-container > ul > li > div.search-in
   font-size: 0.75em;
   background: black;
 }
+header nav > div.search > div.search-results-container > ul > li > div.search-info > div.search-price-discount > p.base-price {
+  padding: 0.2em;
+  text-decoration: line-through;
+  color: #6f6f6f;
+}
 header nav > div.search > div.search-results-container > ul > li > div.search-info > div.search-price-discount > p.final-price {
   padding: 0.2em;
 }
@@ -443,10 +448,10 @@ header nav > div.sublinks > div.user-container > div.avatar-container > div.avat
 header nav > div.sublinks > div.user-container > div.avatar-container > div.cart-container {
   position: absolute;
   top: -5%;
-  right: -5%;
+  right: -15%;
   width: 18px;
   height: 18px;
-  background: #ff0040;
+  background: #4c6b22;
   border-radius: 50%;
   display: flex;
   flex-direction: row;
@@ -469,7 +474,7 @@ header nav > div.sublinks > div.user-container > div.user-sublinks {
   background-color: #8b0023;
   transition: all 0.1s linear;
   top: 100%;
-  left: -100%;
+  left: -400%;
 }
 header nav > div.sublinks > div.user-container > div.user-sublinks.display {
   visibility: visible;
@@ -757,8 +762,8 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
   align-items: center;
   gap: 0.5em;
   display: inline-flex;
-  font-size: 0.85em;
-  padding: 0 0.5em 0 0.5em;
+  font-size: 1.1em;
+  padding: 0.2em 0.4em;
 }
 .main-section > .main-card-container > div.slider > a > div:not(.main-image-container) > div.home-copomnent-main > div.price-container.price-container > div.price span, .main-section > .main-card-container > div.slider > div > div:not(.main-image-container) > div.home-copomnent-main > div.price-container.price-container > div.price span {
   font-size: 0.95em;
@@ -877,8 +882,8 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
   align-items: center;
   gap: 0.5em;
   display: inline-flex;
-  font-size: 0.85em;
-  padding: 0 0.5em 0 0.5em;
+  font-size: 1.1em;
+  padding: 0.2em 0.4em;
 }
 .main-section > .main-card-container > div.slider.mobile-results-search > a > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span, .main-section > .main-card-container > div.slider.mobile-results-search > div > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span, .main-section > .main-card-container > div.slider.desktop-results-search > a > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span, .main-section > .main-card-container > div.slider.desktop-results-search > div > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span {
   font-size: 0.95em;
@@ -1189,6 +1194,7 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
   flex: 0;
   font-size: 0.8em;
   text-align: right;
+  text-transform: capitalize;
   padding: 0 0.5em;
 }
 @media (min-width: 600px) {
@@ -1222,8 +1228,8 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
   align-items: center;
   gap: 0.5em;
   display: inline-flex;
-  font-size: 0.85em;
-  padding: 0 0.5em 0 0.5em;
+  font-size: 1.1em;
+  padding: 0.2em 0.4em;
 }
 .main-section > .secondary-card-container > div.slider > div > div div.price-container > div.price span {
   font-size: 0.95em;
@@ -1446,6 +1452,11 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
     mask-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, #151515 30%);
   }
 }
+.main-section > .movie-card-container > div.slider > a > div.top-review > div:first-child > h3 {
+  text-transform: capitalize;
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
+}
 .main-section > .movie-card-container > div.slider > a > div.top-review > div:first-child > p {
   font-size: 0.85em;
   font-weight: 400;
@@ -1656,8 +1667,8 @@ header nav > div.sublinks > div.user-container > div.user-sublinks > ul > li > a
   align-items: center;
   gap: 0.5em;
   display: inline-flex;
-  font-size: 0.85em;
-  padding: 0 0.5em 0 0.5em;
+  font-size: 1.1em;
+  padding: 0.2em 0.4em;
 }
 .main-section > .special-card-container > div.special-card-slider > a > div.price > p.price-container > div.price span {
   font-size: 0.95em;
@@ -3864,8 +3875,8 @@ section.search-container > .primary-search > .main-search > .scrollable-search >
   align-items: center;
   gap: 0.5em;
   display: inline-flex;
-  font-size: 0.85em;
-  padding: 0 0.5em 0 0.5em;
+  font-size: 1.1em;
+  padding: 0.2em 0.4em;
 }
 section.search-container > .primary-search > .main-search > .scrollable-search > div > a > div:not(.main-image-container) > div.home-copomnent-main > div.price-container.price-container > div.price span, section.search-container > .primary-search > .main-search > .scrollable-search > div > div > div:not(.main-image-container) > div.home-copomnent-main > div.price-container.price-container > div.price span {
   font-size: 0.95em;
@@ -3984,8 +3995,8 @@ section.search-container > .primary-search > .main-search > .scrollable-search >
   align-items: center;
   gap: 0.5em;
   display: inline-flex;
-  font-size: 0.85em;
-  padding: 0 0.5em 0 0.5em;
+  font-size: 1.1em;
+  padding: 0.2em 0.4em;
 }
 section.search-container > .primary-search > .main-search > .scrollable-search > div.mobile-results-search > a > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span, section.search-container > .primary-search > .main-search > .scrollable-search > div.mobile-results-search > div > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span, section.search-container > .primary-search > .main-search > .scrollable-search > div.desktop-results-search > a > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span, section.search-container > .primary-search > .main-search > .scrollable-search > div.desktop-results-search > div > div.basic > div.search-copomnent-main > div.price-container.price-container > div.price span {
   font-size: 0.95em;
@@ -5870,10 +5881,16 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   display: inline-block;
 }
 div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) > h4 {
+  text-transform: capitalize;
   width: 100%;
   color: #c6d4df;
 }
 div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(1) > i {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.3em;
   width: 100%;
   color: #6f6f6f;
 }
@@ -5899,27 +5916,31 @@ div.checkout-container > div.cart-container > div.cart-item-container > a.cart-i
   align-items: stretch;
   gap: 0.5em;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(1) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div.discount-percent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
   background-color: #4c6b22;
-  display: inline;
-  padding: 0.1em 0.3em;
+  padding: 0.1em 0.2em;
   color: #a4d007;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(2) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div.price {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
   gap: 0;
 }
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(2) > p:nth-child(1) {
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div.price > p.strikeout {
   text-decoration: line-through;
-  color: #6f6f6f;
-  font-size: 0.7em;
-}
-div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div:nth-child(2) > p:nth-child(2) {
-  color: #c6d4df;
+  color: #939393;
   font-size: 0.8em;
+}
+div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.prices > div.price > p.true-price {
+  color: #c6d4df;
+  font-size: 1em;
 }
 div.checkout-container > div.cart-container > div.cart-item-container > a.cart-item > div.item > div:nth-child(2) > div.remove {
   text-align: right;
