--- a/styles/sass/components/_detail.sass
+++ b/styles/sass/components/_detail.sass
@@ -417,7 +417,14 @@ div.detail-container
                                     border-radius: 4px
                                     >*
                                         display: inline-block
-                                    >p
+                                    >p.discount
+                                        padding: .4em
+                                        margin: .2em
+                                        color: $fc-discounted
+                                        background: $bgc-discounted
+                                        font-weight: 600
+                                        border-radius: .1em
+                                    >p.price
                                         padding: 0 .5em
                                     >button
                                         padding: .6em
