--- a/styles/sass/components/_header.sass
+++ b/styles/sass/components/_header.sass
@@ -194,4 +194,5 @@ header
                 >div.user-sublinks
                     @include sublinks
                     top: 100%
-                    left: -400%
+                    left: unset
+                    right: 0
