--- a/styles/publicDien/css/style.module.scss
+++ b/styles/publicDien/css/style.module.scss
@@ -217,6 +217,76 @@
             margin-block: 2rem;
             gap: 2rem;
 
+            .form__post {
+                float: left;
+                width: 100%;
+                color: white;
+                margin: 0 auto;
+            }
+
+            input[type=text],
+            select,
+            textarea {
+                width: 100%;
+                padding: 12px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                resize: vertical;
+            }
+
+            .row {
+                margin-bottom: 5px;
+            }
+
+            input[type=submit] {
+                padding: 12px 12px 12px 0;
+                background-color: #aa0404;
+                color: white;
+                padding: 12px 20px;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                float: right;
+
+            }
+
+            input[type=submit]:hover {
+                background-color: #ff0000;
+            }
+
+            .container {
+                width: 100%;
+                border-radius: 5px;
+                margin: 0 auto;
+                padding: 20px;
+            }
+
+            .col_25 {
+                float: right;
+                width: 25%;
+                margin-top: 6px;
+            }
+
+
+
+            /* Clear floats after the columns */
+            .row:after {
+                content: "";
+                display: table;
+                clear: both;
+            }
+
+            /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+            @media screen and (max-width: 600px) {
+
+                .col_25,
+
+                input[type=submit] {
+                    width: 100%;
+                    margin-top: 0;
+                }
+            }
+
             h1 {
                 color: white
             }
