--- a/styles/publicDat/scss/profile/layout/_headerprofile.scss
+++ b/styles/publicDat/scss/profile/layout/_headerprofile.scss
@@ -28,7 +28,7 @@
         }
     }
     .exp__profile{
-        
+        padding-left: 280px;
         .level{
             display: flex;
             font-size: 24px;
