--- a/styles/sass/components/_admin.sass
+++ b/styles/sass/components/_admin.sass
@@ -441,6 +441,8 @@ section.admin-container
                         grid-column: span 2
                     >div
                         @include grid($columns: 1fr 1fr, $gap: .5em)
+                        >p
+                            grid-column: span 2
 
     >div.filter-controls
         @include sidebar-body($trsX: translateX(100%), $direction: right)
